--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
         line-height: 200px;
       }
       #top-half {
-        width: 400px;
+        width: 100%;
         max-width: 100%;
         height: 50%;
         background-color: #273f63;
         position: absolute;
         top: 0;
         left: 0;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
     </style>
   </head>
